@@ -1,3 +1,10 @@
+2008-07-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/spellcheck.c:
+   Create a new dict object when the default language in the preferences
+   dialog was changed to actually use the new language.
+
+
 2008-06-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/spellcheck.c:
@@ -24,7 +31,7 @@
  * src/spellcheck.c:
    Compilation fixes.
  * Makefile.am:
-   Add html target.
+   Add HTML target.
 
 
 2008-05-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
